Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-844

tablet layout SVG no longer includes rowsets undergoing compaction

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Private Beta
    • 1.8.0
    • ops-tooling
    • None

    Description

      The tablet rowset layout svg no longer shows any rowsets which are currently in the midst of compaction. That makes sense since it re-uses the compaction selection code to generate the diagram. However, it's misleading.

      Attachments

        Activity

          People

            wdberkeley William Berkeley
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: